# supervisor

./: .gitattributes  .gitignore  Cargo.toml  MoonZoon.toml  README.md  build.rs  configuration.xml  index.html
backend/: Cargo.toml
backend/src/: arena.rs  journal.rs  main.rs  optitrack.rs  router.rs  webui.rs  webui2.rs
backend/src/network/: fernbedienung_ext.rs  mod.rs  xbee.rs
backend/src/network/fernbedienung/: mod.rs  protocol.rs
backend/src/robot/drone/: mod.rs  task.rs
backend/src/robot/pipuck/: mod.rs  task.rs
backend/src/scripts/: drone_set_identifier.sh
client/: Cargo.toml
client/public/: index.html
client/public/styles/: materialdesignicons.min.css  theme.css
client/src/: builderbot.rs  drone.rs  experiment.rs  lib.rs  pipuck.rs
client/src/experiment/: builderbot.rs  control.rs  drone.rs  mod.rs  pipuck.rs
client/src/mdl/: grid.rs  mod.rs
client/src/mdl/card/: mod.rs  supporting_text.rs
client/src/mdl/layout/: header.rs
client/src/mdl/tabs/: mod.rs  panel.rs  tab.rs
crates/moon/src/: config.rs  lib.rs
crates/mzoon/src/: config.rs  set_env_vars.rs
crates/thrussh/: Cargo.toml
crates/thrussh/src/: auth.rs  compression.rs  kex.rs  key.rs  lib.rs  negotiation.rs  session.rs  ssh_read.rs
crates/thrussh/src/cipher/: mod.rs
crates/thrussh/src/client/: encrypted.rs  kex.rs  mod.rs  proxy.rs  session.rs
crates/thrussh/src/server/: encrypted.rs  kex.rs  mod.rs  session.rs
frontend/: Cargo.toml  LICENSE.md  wasm-pack.stamp
frontend/public/: index.html
frontend/public/styles/: fonts.css  styles.css
frontend/src/: lib.rs
frontend/src/mdl/: button.rs  mod.rs
frontend/src/mdl/card/: actions.rs  title.rs  title_text.rs
frontend/src/mdl/layout/: content.rs  header_row.rs  mod.rs
frontend/src/mdl/tabs/: tab_bar.rs
public/: icons.css  index.html
shared/: Cargo.toml
shared/src/: builderbot.rs  drone.rs  experiment.rs  lib.rs  pipuck.rs
shared/src/experiment/: mod.rs  software.rs
src/: arena.rs  experiment.rs  firmware.rs  journal.rs  log.rs  main.rs  optitrack.rs  router.rs  software.rs  webui.rs
src/network/: fernbedienung_ext.rs  mod.rs  ssh.rs  xbee.rs
src/network/fernbedienung/: mod.rs  protocol.rs
src/robot/: drone.rs  mod.rs  pipuck.rs
src/robot/builderbot/: identify_builderbot.argos  mod.rs  task.rs
src/robot/drone/: codec.rs  identify_drone.argos  identify_drone.lua  mod.rs  task.rs
src/robot/pipuck/: identify_pipuck.argos  identify_pipuck.lua  mod.rs  task.rs
src/robots/: drone.rs  mod.rs  pipuck.rs  ssh.rs  xbee.rs
src/scripts/: drone_identify.sh  drone_query_devices.sh  drone_set_identifier.sh  write_upcore_id.sh
static/: download.js  index.html  socket.js  theme.css
test_controllers/: test_pipuck_leds.argos  test_wifi.argos  test_wifi.lua
testing/: configuration.xml  motive.pcap  parse_journal.py  test_wifi.argos  test_wifi.lua
