[package]
name = "mns-supervisor"
version = "0.1.0"
authors = ["Michael Allwright <allsey87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-pickle = { version = "0.6" }
roxmltree = { version = "0.13" }

tokio = { version = "1.6", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1" }
natnet-decode = { version = "0.1" }
warp = { version = "0.3", features = ["websocket"] }
futures = { version = "0.3" }
static_dir = { version = "0.2" }
structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.11" }

bytes = { version = "1.0", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v3", "v4"] }
ipnet = { version = "2.3" }
regex = { version = "1.4" }
lazy_static = { version = "1.4" }
base64 = { version = "0.13" }
md5 = { version = "0.7" }
itertools = { version = "0.9" }
bitvec = { version = "0.21" }
rand = { version = "0.8" }

semver = { version = "0.4"}
log = { version = "0.4" }
env_logger = { version = "0.8" }
thiserror = { version = "1.0" }

mavlink = {version = "0.9"}
crc-any = {version = "2.3"}
webbrowser = { version = "0.5" }




