[workspace]
members = [
    "frontend",
    "backend",
    "shared",
    "crates/mzoon",
    "crates/moon",
    "crates/zoon",
    "crates/moonlight",
    "crates/static_ref_macro"
]

[profile.release]
lto = true
codegen-units = 1

[profile.release.package.frontend]
opt-level = 'z'

[profile.release.package.backend]
opt-level = 3
