[package]
name = "backend"
repository = "https://github.com/iridia-ulb/supervisor"
authors = ["Michael Allwright <mallwright@learnrobotics.io>"]
description = "Supervisor Backend"
license = "MIT"
edition = "2018"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.6", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3" }
warp = { version = "0.3", features = ["websocket"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-pickle = { version = "0.6" }
roxmltree = { version = "0.13" }
natnet-decode = { version = "0.1" }
static_dir = { version = "0.2" }
structopt = { version = "0.3", default-features = false }
pin-project = { version = "1.0" }
reqwest = { version = "0.11" }
async-stream = { version = "0.3" }

bytes = { version = "1.0", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v3", "v4"] }
ipnet = { version = "2.3" }
macaddr = { version = "1.0" }
regex = { version = "1.4" }
lazy_static = { version = "1.4" }
base64 = { version = "0.13" }
md5 = { version = "0.7" }
itertools = { version = "0.9" }
bitvec = { version = "0.21" }
rand = { version = "0.8" }

semver = { version = "0.4"}
log = { version = "0.4" }
env_logger = { version = "0.8" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

mavlink = {version = "0.9"}
crc-any = {version = "2.3"}
webbrowser = { version = "0.5" }
