[package]
name = "frontend"
repository = "https://github.com/iridia-ulb/supervisor"
authors = ["Michael Allwright <mallwright@learnrobotics.io>"]
description = "Supervisor Frontend"
license = "MIT"
edition = "2018"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
shared = { path="../shared" }
wasm-bindgen = "^0.2"
yew = "0.18"
yewtil = "0.4"
anyhow = "1.0"
