[package]
name = "client"
repository = "https://github.com/iridia-ulb/supervisor"
authors = ["Michael Allwright <mallwright@learnrobotics.io>"]
description = "WebAssembly client for the Supervisor"
license = "MIT"
edition = "2018"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = { version = "0.13" }
bytes = { version = "1.0", features = ["serde"] }
shared = { path = "../shared" }
strum = { version = "0.21" }
strum_macros = { version = "0.21" }
bincode = { version = "1.3" }
wasm-bindgen = { version = "^0.2" }
yew = { version = "0.18" }
yewtil = { version = "0.4" }
anyhow = { version = "1.0" }
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }
js-sys = { version = "0.3" }
uuid = { version = "0.8", features = ["serde", "wasm-bindgen", "v4"] }
