[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/iridia-ulb/supervisor"
authors = ["Michael Allwright <allsey87@gmail.com>"]
description = "Supervisor Frontend"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
zoon = { path = "../crates/zoon" }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
shared = { path = "../shared", features = ["frontend"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

