[package]
name = "shared"
repository = "https://github.com/iridia-ulb/supervisor"
authors = ["Michael Allwright <mallwright@learnrobotics.io>"]
description = "Supervisor Common"
license = "MIT"
edition = "2018"
version = "0.1.0"

[dependencies]
base64 = { version = "0.13" }
bytes = { version = "1.0", features = ["serde"] }
macaddr = { version = "1.0", features = ["serde_std"] }
serde = { version = "1.0", features = ["rc"] }