[package]
name = "shared"
repository = "https://github.com/iridia-ulb/supervisor"
authors = ["Michael Allwright <mallwright@learnrobotics.io>"]
description = "Supervisor Common"
license = "MIT"
edition = "2018"
version = "0.1.0"

[dependencies]
bytes = { version = "1.0", features = ["serde"] }
macaddr = { version = "1.0", features = ["serde_std"] }
serde = { version = "1.0" }
roxmltree = { version = "0.13" }
thiserror = { version = "1.0" }
md5 = { version = "0.7" }
uuid = { version = "0.8", features = ["serde", "v3", "v4"] }